syntax = "proto3";

package proto;

option go_package = "github.com/msmkdenis/yap-gophkeeper/internal/proto/user";

message PostUserRegisterRequest {
  string login = 1;
  bytes password = 2;
}

message PostUserRegisterResponse {
  string token = 1;
}

message PostUserLoginRequest {
  string login = 1;
  bytes password = 2;
}

message PostUserLoginResponse {
  string token = 1;
}

service UserService {
  rpc PostRegisterUser(PostUserRegisterRequest) returns (PostUserRegisterResponse);
  rpc PostLoginUser(PostUserLoginRequest) returns (PostUserLoginResponse);
}